# lx-anonymizer

./: .devenv.flake.nix  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Abstract.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Devenv.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  SETTINGS.md  __init__.py  default.nix  devenv.nix  devenv.yaml  enhanced_best_frame_text.py  env_setup.py  example.env  example_anonymize_pdf.py  fix_jsonl.py  flake.nix  gold.json  gold_regex.json  gpu_check.py  hello.py  lx-anonymizer.code-workspace  manage.py  model_cleanup.py  names_control copy.json  names_control.json  names_deepseek.json  package.nix  ppold.toml  (+10 more)
.devenv/: devenv.json  flake.json  input-paths.txt  load-exports  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-1-link
.direnv/: devenv-profile-138ff0dafc884feb3f6b30593a3c8b4f2f7d2b30.rc  devenv-profile-7223e845cb5cd99efdd5cf6c887f75ba82fd4948.rc
.github/workflows/: publish.yml  python-app.yml
agl_report_reader/: report_reader.py  utils.py
agl_report_reader/anonymization/: __init__.py  redact.py
agl_report_reader/extraction/: __init__.py  examination_data.py  other_data.py  patient_data.py
cli/: __init__.py  frame_reader.py  report_reader.py
docs/: MODEL_CALLS_AND_DECISIONS.md  NVENC_ACCELERATION.md  OCR_BACKEND_EVALUATION.md  lx-annotate.local_Archive [26-07-16 13-25-10].har  midi-b-evaluation-2026-07-14.md  phi-region-detector-training.md
lx_anonymizer/: .gitignore  README.md  __init__.py  _native.py  add_names.py  anonymizer.py  asessment.py  best_frame_text.py  blur.py  box_operations.py  citations.bib  cli.py  collect_patient_names copy.py  collect_patient_names.py  collect_patient_names_copy.py  config.py  craft_text_detection.py  cropping_utils.py  custom_logger.py  determine_gender.py  device_reader.py  dicom_anonymization.py  directory_setup.py  donut_ocr.py  east_text_detection.py  enhanced_best_frame_text.py  ensemble_ocr.py  field_usages.csv  flair_NER.py  frame_analysis_service.py  frame_cleaner.py  frame_cleaner_small.py  frame_cleaner_video.py  frame_metadata_extractor.py  frame_ocr.py  frame_ocr_tesserocr.py  fuzzy_matching.py  gpu_management.py  image_loader.py  image_processor.py  (+61 more)
lx_anonymizer/anonymization/: anonymizer.py  blur.py  detector_video_masking.py  masking.py  sensitive_region_cropper.py  text_anonymizer.py
lx_anonymizer/cli/: frame_cleaner_cli.py
lx_anonymizer/debug/: ocr_debug.py
lx_anonymizer/devices/: default.json  olympus_cv_1500.json
lx_anonymizer/evaluation/: __init__.py  midi_b.py  ocr_backend_matrix.py  pipeline_evaluation.py
lx_anonymizer/generated_reports/: keywords_20250414_161025.json  keywords_20250414_161405.json  keywords_20250414_161642.json  keywords_20250414_162856.json  keywords_20250414_163025.json  keywords_20250414_163047.json  keywords_20250414_163103.json  keywords_20250414_163118.json  keywords_20250414_163138.json  keywords_20250414_163150.json  keywords_20250414_163202.json  keywords_20250414_163214.json  keywords_20250414_163238.json  keywords_20250414_163253.json  keywords_20250414_163312.json  keywords_20250414_163323.json  keywords_20250414_163337.json  keywords_20250414_163353.json  keywords_20250414_163414.json  keywords_20250414_163555.json  keywords_20250414_163627.json  keywords_20250414_163641.json  keywords_20250425_130803.json  keywords_20250425_130824.json  keywords_20250425_130838.json  keywords_20250425_130850.json  keywords_20250425_130903.json  keywords_20250425_130916.json  keywords_20250425_130936.json  keywords_20250425_130954.json  keywords_20250425_131012.json  keywords_20250425_131027.json  keywords_20250425_131044.json  keywords_20250425_131059.json  keywords_20250425_131116.json  keywords_20250425_131142.json  keywords_20250425_131206.json  keywords_20250425_131220.json  keywords_20250425_131233.json  keywords_20250425_131451.json  (+90 more)
lx_anonymizer/hardware/: gpu_management.py
lx_anonymizer/huggingface_cache/: can_load_model.py
lx_anonymizer/image_processing/: image_loader.py  image_processor.py  pdf_operations.py
lx_anonymizer/image_reassembly/: image_reassembly.py
lx_anonymizer/llm/: base.py  factory.py  llm_extractor.py  llm_service.py  vllm_extractor.py  vllm_service.py
lx_anonymizer/names_dict/: ascii.py  (+18 more)
midi-b-dataset/: TCIA-MIDI-B-Curated-Test_20250502-1.tcia  TCIA-MIDI-B-Curated-Validation_20250502.tcia  TCIA-MIDI-B-Synthetic-Test_20250502.tcia  TCIA-MIDI-B-Synthetic-Validation_20250502.tcia
ollama/: Modelfile.gemma4-ocr
scripts/: apply_main_reviewer_corrections.py  audit_distribution.py  convert_publication_formulas_to_omml.py  evaluate_accumulation_metrics.py  evaluate_pipeline_approach.py  plot_ocr_backend_matrix.py  pre_commit_checks.sh  provision_ollama_gemma4.sh  run_checks.sh  sharpen_publication_methods.py  update_publication_official_midi.py
test_data/: gold.json  gold_deepseek.json  names_control copy.json  names_control.json  names_regex.json
tests/: conftest.py  enhanced_frame_ocr.py  test_anonymizer.py  test_audit_distribution.py  test_cli.py  test_cli_and_package_exports.py  test_cli_integration.py  test_cli_validation.py  test_config.py  test_create_mask_from_roi.py  test_detector_video_masking.py  test_dicom_anonymization.py  test_distribution_metadata.py  test_ffmpeg_filters.py  test_frame_cleaner.py  test_frame_cleaner_example_frames.py  test_frame_metadata_extractor_dates.py  test_frame_report_helper_logic.py  test_gender_detection.py  test_imports.py  test_llm_meta_helpers.py  test_llm_service_vision_ocr.py  test_main_integration.py  test_masking_crop.py  test_medical_pytesseract.py  test_midi_b_evaluation.py  test_midi_b_phi_dataset.py  test_module.py  test_ocr_backend_matrix.py  test_ocr_fix.py  test_ocr_frame_rapidocr.py  test_ocr_improvements.py  test_ocr_text_native.py  test_ollama_fix.py  test_ollama_fix_comprehensive.py  test_ollama_integration.py  test_ollama_llm_meta_helpers.py  test_ollama_serve_fallback_integration.py  test_paper_metrics.py  test_phi_region_detector.py  (+19 more)
(+82 files in other folders)
