[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Max Hild", email = "maxhild10@gmail.com"},
  {name = "Thomas J. Lux", email = "lux_t1@ukw.de"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: German",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "certifi>=2024.8.30",
  "dateparser>=1.2.1",
  "faker>=37.1.0",
  "gender-guesser>=0.4.0",
  "imutils>=0.5.4",
  "numpy>=1.26.0",
  "opencv-python>=4.10.0.84",
  "pillow>=10.4.0",
  "protobuf>=6.30.2",
  "pydantic>=2.9.0",
  "pymupdf>=1.25.1",
  "pytesseract>=0.3.13",
  "rapidfuzz>=3.13.0",
  "requests>=2.32.3",
  "spacy==3.8.3",
  "tenacity>=9.1.2",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  "pyspellchecker>=0.8.2",
  "pdfplumber>=0.11.7",
  "django>=5.2.7",
  "pip>=25.2",
  "flair>=0.15.1",
  "pandas>=2.3.3",
  "pre-commit>=4.5.1",
  "opencv-stubs>=0.1.1",
]
description = "OCR-driven anonymization pipeline for medical reports and endoscopy frames"
keywords = [
  "anonymization",
  "medical",
  "ocr",
  "nlp",
  "privacy",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "WG Lux", email = "lux@coloreg.de"},
]
name = "lx-anonymizer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.8.9.11"

[project.urls]
Changelog = "https://github.com/wg-lux/lx-anonymizer/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wg-lux/lx-anonymizer#readme"
Homepage = "https://github.com/wg-lux/lx-anonymizer"
"Issue Tracker" = "https://github.com/wg-lux/lx-anonymizer/issues"

[project.optional-dependencies]
dev = [
  "flake8>=7.1.1",
  "pytest>=7.0.1",
  "pytest-cov>=5.0.0",
  "uv>=0.4.17",
  "twine>=6.2.0",
  "build>=1.3.0",
]
django = [
  "django>=5.2",
]
llm = [
  "ollama>=0.4.7",
  "tiktoken>=0.9.0",
  "transformers==4.44.2",
  "hezar>=0.42.0",
]
ocr = [
  "tesserocr>=2.8.0",
  "verovio>=5.1.0",
]

[project.scripts]
lx-anonymizer = "cli.report_reader:main"

[tool.hatch.build.targets.wheel]
include = [
  "lx_anonymizer/names_dict/**/*",
  "lx_anonymizer/devices/**/*",
]
packages = ["cli", "lx_anonymizer"]

[tool.hatch.build.targets.sdist]
include = [
  "cli",
  "lx_anonymizer",
  "LICENSE",
  "README.md",
  "MANIFEST.in",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
"de-core-news-lg" = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl"}
