[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
authors = [
  {name = "Max Hild", email = "maxhild10@gmail.com"},
  {name = "Thomas J. Lux", email = "lux_t1@ukw.de"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: German",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "certifi>=2024.8.30",
  "dateparser>=1.2.1",
  "faker>=37.1.0",
  "gender-guesser>=0.4.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "pdfplumber>=0.11.7",
  "protobuf>=6.30.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.0.0",
  "pymupdf>=1.25.1",
  "pytesseract>=0.3.13",
  "pyspellchecker>=0.8.2",
  "rapidfuzz>=3.13.0",
  "requests>=2.32.3",
  "spacy==3.8.3",
  "tenacity>=9.1.2",
  "types-requests>=2.32.4.20260107",
]
description = "OCR-driven anonymization pipeline for medical reports and endoscopy frames"
keywords = [
  "anonymization",
  "medical",
  "ocr",
  "nlp",
  "privacy",
]
license = {file = "LICENSE"}
maintainers = [
  {name = "WG Lux", email = "lux@coloreg.de"},
]
name = "lx-anonymizer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.9.0.6"

[project.urls]
Changelog = "https://github.com/wg-lux/lx-anonymizer/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wg-lux/lx-anonymizer#readme"
Homepage = "https://github.com/wg-lux/lx-anonymizer"
"Issue Tracker" = "https://github.com/wg-lux/lx-anonymizer/issues"

[project.optional-dependencies]
dev = [
  "build>=1.3.0",
  "flake8>=7.1.1",
  "mypy>=1.18.2",
  "opencv-stubs>=0.1.1",
  "pandas>=2.3.3",
  "pre-commit>=4.5.1",
  "pytest>=7.0.1",
  "pytest-cov>=5.0.0",
  "twine>=6.2.0",
  "uv>=0.4.17",
]
django = [
  "django>=5.2",
]
llm = [
  "tiktoken>=0.9.0",
]
ocr = [
  "hezar>=0.42.0",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  "transformers==4.45.0",
  "tesserocr>=2.8.0",
  "verovio>=5.1.0",
]
nlu = [
  "flair>=0.15.1",
]

[project.scripts]
lx-anonymizer = "lx_anonymizer.cli:main"

[tool.hatch.build.targets.wheel]
include = [
  "lx_anonymizer/names_dict/**/*",
  "lx_anonymizer/devices/**/*",
]
exclude = [
  "lx_anonymizer/generated_reports/**/*",
  "lx_anonymizer/unused_scripts/**/*",
  "lx_anonymizer/**/*.bak",
]
packages = ["lx_anonymizer"]

[tool.hatch.build.targets.sdist]
include = [
  "lx_anonymizer",
  "LICENSE",
  "README.md",
  "MANIFEST.in",
]
exclude = [
  "lx_anonymizer/generated_reports/**/*",
  "lx_anonymizer/unused_scripts/**/*",
  "lx_anonymizer/**/*.bak",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.extra-build-dependencies]
spacy = ["setuptools", "numpy", "Cython"]

[tool.maturin]
python-source = "."
module-name = "lx_anonymizer._lx_anonymizer_native"
bindings = "pyo3"
