[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lx-anonymizer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.9.3.4"

authors = [
  {name = "Max Hild", email = "maxhild10@gmail.com"},
  {name = "Thomas J. Lux", email = "lux_t1@ukw.de"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: German",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "certifi>=2024.8.30",
  "dateparser>=1.2.1",
  "faker>=37.1.0",
  "gender-guesser>=0.4.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0.84",
  "pillow>=10.4.0",
  "pdfplumber>=0.11.7",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.0.0",
  "pymupdf>=1.25.1",
  "pytesseract>=0.3.13",
  "pyspellchecker>=0.8.2",
  "rapidfuzz>=3.13.0",
  "requests>=2.32.3",
  "spacy==3.8.3",
  "tenacity>=9.1.2",
  "lx-dtypes>=0.2.1",
  "tesserocr>=2.9.1",
  "onnxruntime>=1.25.1",
  "rapidocr>=3.8.1",
  "tesserocr>=2.9.1",
  "transformers==4.45.0",
  "verovio>=5.1.0",
  "tiktoken>=0.9.0",
  "ziglang>=0.15.2",
  "click>=8.4.2",
]
description = "OCR-driven anonymization pipeline for medical reports and endoscopy frames"
keywords = ["anonymization", "medical", "ocr", "nlp", "privacy"]
license = {file = "LICENSE"}
maintainers = [
  {name = "WG Lux", email = "lux@coloreg.de"},
]

[project.urls]
Changelog = "https://github.com/wg-lux/lx-anonymizer/blob/main/CHANGELOG.md"
Documentation = "https://github.com/wg-lux/lx-anonymizer#readme"
Homepage = "https://github.com/wg-lux/lx-anonymizer"
"Issue Tracker" = "https://github.com/wg-lux/lx-anonymizer/issues"

[project.optional-dependencies]
evaluation = [
  "pydicom>=3.0.0",
]
dev = [
  "build>=1.3.0",
  "flake8>=7.1.1",
  "mypy>=1.18.2",
  "opencv-stubs>=0.1.1",
  "pandas>=2.3.3",
  "pre-commit>=4.5.1",
  "pyright>=1.1.407",
  "pytest>=7.0.1",
  "pytest-cov>=5.0.0",
  "twine>=6.2.0",
  "types-requests>=2.32.4.20260107",
  "uv>=0.4.17",
  "ziglang>=0.15.2",
  "tcia-utils>=3.3.4",
]

# CPU-only PyTorch-dependent feature set.
cpu = [
  "flair>=0.15.1",
  "hezar>=0.42.0",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  "ultralytics>=8.4.47",
]

# CUDA-enabled PyTorch-dependent feature set. Use only on hosts where the NVIDIA
# wheel stack is desired.
gpu = [
  "flair>=0.15.1",
  "hezar>=0.42.0",
  "onnxruntime-gpu>=1.26.0",
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  "ultralytics>=8.4.47",
]

[project.scripts]
lx-anonymizer = "lx_anonymizer.cli:main"
lx-anonymizer-evaluate-midi-b = "lx_anonymizer.evaluation.midi_b:main"
lx-anonymizer-export-dicom = "lx_anonymizer.dicom_anonymization:main"
lx-anonymizer-generate-phi-data = "lx_anonymizer.training.synthetic_phi_frames:main"
lx-anonymizer-generate-endoscopy-stickers = "lx_anonymizer.training.synthetic_endoscopy_stickers:main"
lx-anonymizer-generate-midi-b-phi-data = "lx_anonymizer.training.midi_b_phi_dataset:main"
lx-anonymizer-generate-radphi-data = "lx_anonymizer.training.radphi_dataset:main"
lx-anonymizer-train-phi = "lx_anonymizer.text_detection.phi_region_detector_training:main"

[tool.uv.extra-build-dependencies]
spacy = ["setuptools", "numpy", "Cython"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.maturin]
python-source = "."
module-name = "lx_anonymizer._lx_anonymizer_native"
bindings = "pyo3"
zig = true
# Migrated Hatch rules here so Maturin respects them
include = [
  "lx_anonymizer/names_dict/**/*",
  "lx_anonymizer/devices/**/*"
]
exclude = [
  ".gitignore",
  "**/__pycache__/**/*",
  "**/*.py[cod]",
  "lx_anonymizer/.gitignore",
  "lx_anonymizer/**/*.bak",
  "lx_anonymizer/_lx_anonymizer_native.so",
  "lx_anonymizer/_lx_anonymizer_native.cpython-*.so",
  "lx_anonymizer/generated_reports/**/*",
  "lx_anonymizer/test_images/**/*",
  "lx_anonymizer/unused_scripts/**/*",
  "study_data/**/*",
  "study-data/**/*"
]
[tool.uv.sources]
#lx-dtypes = { path = "lx-data-models", editable = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
